fix overflow generated by preloader

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,13 +30,12 @@ body{
     overflow:auto !important;
 }
 #preloader{
-    position:absolute;
+    position:fixed;
     width:100%;
-    height:100vh;
+    inset:0;
     z-index:999;
     background-color:var(--color1);
     transition: background-color 1s linear 0s;
-    overflow:hidden !important;
 }
 .offPreloader{
     background-color:var(--color1);
@@ -49,8 +48,9 @@ svg{
 }
 .show-now-wrapper{
     width:100%;
-    height:auto;
+    min-height:100vh;
     position:relative;
+    /* border:2px solid #fff; */
     background-image:url('../img/team.jpg');
     background-repeat:no-repeat;
     background-size:cover;
